--- a/to-do-app/src/style/style.css
+++ b/to-do-app/src/style/style.css
@@ -1,9 +1,10 @@
 #myForm{
-    background: rgba( 179, 228, 178, 0.65 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    background: rgba(122, 181, 121, 0);
+    box-shadow: 0 50px 50px 0 rgba(24, 47, 33, 0.37);
     backdrop-filter: blur( 12px );
     -webkit-backdrop-filter: blur( 12px );
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-
+    border: 3px solid rgba(102, 173, 227, 0.765);
+     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
 }
