--- a/to-do-app/src/style/style.css
+++ b/to-do-app/src/style/style.css
@@ -1,11 +1,27 @@
 #myForm{
-    background: rgba(122, 181, 121, 0);
+    /* background: rgba(122, 181, 121, 0);
     box-shadow: 0 50px 50px 0 rgba(24, 47, 33, 0.37);
     backdrop-filter: blur( 12px );
     -webkit-backdrop-filter: blur( 12px );
     border-radius: 10px;
     border: 3px solid rgba(102, 173, 227, 0.765);
      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: larger;
+    font-size: larger; */
+    border-radius: 25px;
+    backdrop-filter: blur(3.6px);
+    padding: 2rem;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 15px rgb(0 0 0 / 20%);
+    box-sizing: border-box;
+    background-image: linear-gradient(45deg, rgba(66,60,90,0.6), rgba(66,60,90,0.6));
+    width: 100%;
+    min-height: 70px;
+    mix-blend-mode: hard-light;
+    /* From https://css.glass */
+/* background: rgba(244, 245, 166, 0.29);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(7px);
+-webkit-backdrop-filter: blur(7px);
+border: 1px solid rgba(244, 245, 166, 0.84); */
 
 }
