--- a/to-do-app/src/style/style.css
+++ b/to-do-app/src/style/style.css
@@ -1,10 +1,30 @@
 #myForm{
-    border-radius: 25px;
+    /* border-radius: 25px;
     backdrop-filter: blur(13.8px);
     padding: 2rem;
     box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 15px rgb(0 0 0 / 20%);
     box-sizing: border-box;
     background-image: linear-gradient(45deg, rgba(32,152,255,0.2), rgba(50,249,176,0.2));
+    width: 100%;
+    min-height: 70px;
+    mix-blend-mode: hard-light; */
+
+    /* border-radius: 25px;
+    backdrop-filter: blur(23.8px);
+    padding: 2rem;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 15px rgb(0 0 0 / 20%);
+    box-sizing: border-box;
+    background-image: linear-gradient(45deg, rgba(32,152,255,0.85), rgba(50,249,176,0.85));
+    width: 100%;
+    min-height: 70px;
+    mix-blend-mode: hard-light; */
+
+    border-radius: 25px;
+    backdrop-filter: blur(16px);
+    padding: 2rem;
+    box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 15px rgb(0 0 0 / 20%);
+    box-sizing: border-box;
+    background-image: linear-gradient(45deg, rgba(32,152,255,0.4), rgba(50,249,176,0.4));
     width: 100%;
     min-height: 70px;
     mix-blend-mode: hard-light;
